Closed Bug 948833 Opened 11 years ago Closed 11 years ago

xpcom/base/nsMemoryReporterManager.cpp:225:23: error: no member named 'max' in namespace 'std'

Categories

(Core :: XPCOM, defect)

27 Branch
x86_64
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29
Tracking Status
firefox27 --- unaffected
firefox28 --- fixed
firefox29 --- fixed

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file)

I've locally backported bug 945046 to ff27 only to end up bumping into a header bootlegging: <algorithm> via PMemoryReportRequestParent.h.

xpcom/base/nsMemoryReporterManager.cpp:225:23: error:
      no member named 'max' in namespace 'std'; did you mean 'mtx'?
            *maxreg = std::max(*maxreg,
                      ^~~~~
/usr/include/sys/_mutex.h:45:8: note: 'mtx' declared here
struct mtx {
       ^
1 error generated.
Attachment #8345728 - Flags: review?(n.nethercote)
Comment on attachment 8345728 [details] [diff] [review]
explicit #include

[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 945046
User impact if declined: none, only style
Risk to taking this patch (and alternatives if risky): NPOTB
Attachment #8345728 - Flags: approval-mozilla-aurora?
Version: Trunk → 27 Branch
Attachment #8345728 - Flags: review?(n.nethercote) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/f7b9dc991a45
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Comment on attachment 8345728 [details] [diff] [review]
explicit #include

a=NPTOB, no need for approval on NPTOB patches.
Attachment #8345728 - Flags: approval-mozilla-aurora?
Keywords: checkin-needed
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: