Bug 948833 - Explicitly include <algorithm> for std::max on FreeBSD. r=njn, a=NPOTB